--- a/style.css
+++ b/style.css
@@ -439,7 +439,7 @@ nav ul li a.active {
 .portfolio-item img {
     width: 100%;
     height: 200px;
-    object-fit: cover;
+    object-fit: contain;
     display: block;
     border-radius: 12px 12px 0 0;
 }
