--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ A
             color: #fff;
             font-size: 28px;
             font-weight: 600;
+            text-decoration: none !important;
         }
 
         nav .logo span {
