--- a/style.css
+++ b/style.css
@@ -930,21 +930,18 @@ A
             /* Footer Fix for Mobile Phones */
             .footer-top {
                 flex-direction: column;
-                align-items: center;
-                gap: 20px;
+                align-items: flex-start;
+                gap: 30px;
             }
 
             .footer-right {
-                flex-direction: row;
-                flex-wrap: wrap;
-                justify-content: center;
-                gap: 15px;
-                text-align: center;
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 20px;
             }
 
             .footer-col {
-                flex: 1 1 30%;
-                max-width: 150px;
+               width: 100%;
             }
 
             .footer-col h4 {
