--- a/style.css
+++ b/style.css
@@ -1211,6 +1211,18 @@ A
         font-size: 1.5rem;
     }
 }
+
+.animate {
+  opacity: 0;
+  transform: translateY(40px);
+  transition: all 0.8s ease-out;
+}
+
+.animate.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 html, body { 
     overflow-x: hidden; 
 }
