--- a/style.css
+++ b/style.css
@@ -232,6 +232,9 @@ A
     max-width: 250px;
     height: auto;
     display: block;
+    object-fit: cover; /* Yeh lagao */
+    width: 100%; /* Ensure it fills the container's width */
+    height: 100%; /* And its height */
 }
         #particles-js {
             position: absolute;
