--- a/style.css
+++ b/style.css
@@ -243,11 +243,15 @@ A
     border-radius: 20% 80% 80% 20% / 80% 20% 80% 20%;
     box-shadow: 0 0 50px 10px rgba(0, 191, 255, 0.7);
     margin-right: 100px;
+    width: 310px; 
+    height: 380px
 }
 
 .hero-img img {
-    max-width: 350px;
-    height: auto;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top;
     display: block;
 }
 
