--- a/style.css
+++ b/style.css
@@ -207,6 +207,7 @@ A
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 2;
 }
 
 #particles-js {
@@ -216,7 +217,7 @@ A
     right: 0;
     width: 100%;
     height: 100%;
-    z-index: -1;
+    z-index: 1;
 }
 
 .hero-content {
@@ -890,6 +891,7 @@ A
             justify-content: center;
             margin-top: 20px;
             gap: 8px; /* Dots ke beech ki space */
+            text-align: center;
         }
 
         .cert-dot {
@@ -899,6 +901,8 @@ A
             border-radius: 50%;
             cursor: pointer;
             transition: background-color 0.3s ease, transform 0.3s ease;
+            display: inline-block;
+            margin: 0 5px;
         }
 
         .cert-dot.active {
